--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DB_USERNAME=root
 DB_PASSWORD=DUKBGwHHHRDDvhwDgQpZlkhMHFBcTJaC
-DB_DATABASE=railway
-DB_HOST=mysql://root:DUKBGwHHHRDDvhwDgQpZlkhMHFBcTJaC@metro.proxy.rlwy.net:45035/railway
+DB_DATABASE=buddies
+DB_HOST=mysql-production-7cb2.up.railway.app
 DB_PORT=3306
 DB_DIALECT=mysql
+DATABASE_URL=mysql://root:DUKBGwHHHRDDvhwDgQpZlkhMHFBcTJaC@metro.proxy.rlwy.net:45035/railway
