--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_USERNAME=root
-DB_PASSWORD=DUKBGwHHHRDDvhwDgQpZlkhMHFBcTJaC
+DB_PASSWORD=UUeGZbefcmPehCyJoYdUHjOjjFDtAZoZ
 DB_DATABASE=buddies
-DB_HOST=mysql-production-7cb2.up.railway.app
+DB_HOST=mysql.railway.internal
 DB_PORT=3306
 DB_DIALECT=mysql
-DATABASE_URL=mysql://root:DUKBGwHHHRDDvhwDgQpZlkhMHFBcTJaC@metro.proxy.rlwy.net:45035/railway
+DATABASE_URL=mysql://root:UUeGZbefcmPehCyJoYdUHjOjjFDtAZoZ@metro.proxy.rlwy.net:52106/buddies
