modification du nom de la base de données dans .env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USERNAME=root
 DB_PASSWORD=UUeGZbefcmPehCyJoYdUHjOjjFDtAZoZ
-DB_DATABASE=buddies
+DB_DATABASE=db_buddies
 DB_HOST=mysql.railway.internal
 DB_PORT=3306
 DB_DIALECT=mysql
