mise à jour de DATABASE_URL dans .env pour correspondre au nom de la base de données

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_DATABASE=db_buddies
 DB_HOST=mysql.railway.internal
 DB_PORT=3306
 DB_DIALECT=mysql
-DATABASE_URL=mysql://root:UUeGZbefcmPehCyJoYdUHjOjjFDtAZoZ@metro.proxy.rlwy.net:52106/buddies
+DATABASE_URL=mysql://root:UUeGZbefcmPehCyJoYdUHjOjjFDtAZoZ@metro.proxy.rlwy.net:52106/db_buddies
