--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_USERNAME=root
-DB_PASSWORD=UUeGZbefcmPehCyJoYdUHjOjjFDtAZoZ
+DB_PASSWORD=root
 DB_DATABASE=db_buddies
-DB_HOST=mysql.railway.internal
-DB_PORT=3306
+DB_HOST=
+DB_PORT=4000
 DB_DIALECT=mysql
-DATABASE_URL=mysql://root:UUeGZbefcmPehCyJoYdUHjOjjFDtAZoZ@metro.proxy.rlwy.net:52106/db_buddies
+DATABASE_URL=
