mise à jour de la configuration de la base de données dans .env v2

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_USERNAME=root
 DB_PASSWORD=root
-DB_DATABASE=db_buddies
-DB_HOST=
+DB_DATABASE=railway
+DB_HOST=mysql.railway.internal
 DB_PORT=4000
 DB_DIALECT=mysql
-DATABASE_URL=
+DATABASE_URL=mysql://root:uMudNNISZWQvPvgqeTwBSSkwVQyhbEEG@mysql.railway.internal:3306/railway
